# gtil_bench

./: CMakeLists.txt  README.md  large_model.json  main.cc  small_model.json
